2010-04-12  Matthias Klose  <doko@ubuntu.com>

	PR icedtea/461
	* plugin/icedteanp/IcedTeaNPPlugin.cc (plugin_filter_ld_library_path):
	New, filter out paths in LD_LIBRARY_PATH which start with
	MOZILLA_FIVE_HOME.
	(plugin_filter_environment): New, build environment to pass to the
	appletviewer process.
	(plugin_test_appletviewer, plugin_start_appletviewer): Start the new
	process with the filtered environment.

2010-04-12  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Use NETX_SRCDIR in EXTRA_DIST.

2010-04-12  Matthias Klose  <doko@ubuntu.com>

	* configure.ac: Clarify result message of the NSS check.

2010-04-10  Matthias Klose  <doko@ubuntu.com>

	* Makefile.am (ICEDTEA_PATCHES): Always apply
	icedtea-nss-6763530.patch. Apply icedtea-nss-not-enabled-config.patch
	if the NSS-based security provider is disabled by default.
	* configure.ac: Be verbose whether the NSS-based security provider
	is enabled or disabled by default.
	* patches/icedtea-nss-not-enabled-config.patch: New.

2010-04-08  Andrew John Hughes  <ahughes@redhat.com>

	* configure.ac: Move NSS detection to macros
	in acinclude.m4.
	* acinclude.m4:
	(IT_OBTAIN_DEFAULT_LIBDIR): Attempts to discover the
	system library directory (e.g /usr/lib64)
	(IT_LOCATE_NSS): Always try and detect NSS
	and only resort to using the system library directory
	detection if NSS is not detected.

2010-04-08  Matthias Klose  <doko@ubuntu.com>

	* Makefile.am (stamps/icedtea.stamp, stamps/icedtea-debug.stamp):
	Always install nss.cfg.
	* configure.ac: Always make nss.cfg a config file, always
	substitute NSS_LIBDIR.

2010-04-07  Deepak Bhole <dbhole@redhat.com>

	* plugin/icedteanp/IcedTeaNPPlugin.cc: ReplaceAll "GCJ" with "ITNP", and
	change other strings to remove reference to GCJ.
	* plugin/icedteanp/IcedTeaNPPlugin.h : Renamed GCJPluginData to
	ITNPPluginData.
	* plugin/icedteanp/IcedTeaPluginUtils.h: Changed debug output to be
	prefixed with "ICEDTEA NP PLUGIN" instead of "GCJ PLUGIN".